# conversion

./: CMakeLists.txt  biicode.conf  cast.h
include/conversion/: cast.hpp
tests/: CMakeLists.txt  conversion_tests.cpp
